# OTUS_HW_10-Agents-

./: .env  .gitignore  README.md  TasksLoader.py  docker-compose.yaml  main.py  pyproject.toml  tickets_engine.py
