[project]
name = "OTUS_HW_10_Agents"
version = "0.0.1"
description = "Home project for Работа с фреймворками и агентами (LangChain, LlamaIndex, Ollama, Haystack)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langfuse>=3.12.0",
    "langgraph>=1.0.6",
    "llama-index>=0.14.13",
    "llama-index-embeddings-ollama>=0.8.6",
    "llama-index-llms-ollama>=0.9.1",
    "python-dotenv>=1.2.1",Получи заявки за первый квартал 2025 года, посчитай количество заявок в каждом месяце квартала и результат выведи в виде таблицы со столбцами: Название месяца, количество заявок в месяце.        
]

